force-app/main/default/objects/IT_Mobile_Device_Request__c/IT_Mobile_Device_Request__c.object-meta.xml
<CustomObject>
    <description>This object is used to raise a ticket for mobile device requests.</description>
    <label>IT Mobile Device Request</label>
    <nameField>
        <displayFormat>MDR# {YYYY}{MM}{DD}-{00000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Mobile Device Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>