force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check the checkbox for accepting</inlineHelpText>
    <label>SAFEGUARDING DOHMH IT ASSETS Accept</label>
    <type>Checkbox</type>
</CustomField>