force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <inlineHelpText>Please enter any Additional Information</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>