force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <label>Asset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>