force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Bureau__c.field-meta.xml
<CustomField>
    <fullName>Bureau__c</fullName>
    <label>Bureau</label>
    <length>75</length>
    <type>Text</type>
</CustomField>