force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/BYOD_POLICY__c.field-meta.xml
<CustomField>
    <fullName>BYOD_POLICY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BYOD POLICY</label>
    <type>Checkbox</type>
</CustomField>