force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>IT Mobile Device Requests</relationshipLabel>
    <relationshipName>IT_Mobile_Device_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>