force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Completing_this_request_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Completing_this_request_on_behalf_of__c</fullName>
    <description>This field captures the request raised on behalf of</description>
    <label>Completing this request on behalf of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Another User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>