force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>