force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>IT Mobile Device Requests</relationshipLabel>
    <relationshipName>IT_Mobile_Device_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>