force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Hardware_and_Data_Plan__c.field-meta.xml
<CustomField>
    <fullName>Hardware_and_Data_Plan__c</fullName>
    <label>Hardware and Data Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>What_mobile_device_are_you_requesting__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware cost: $199.99. monthly plan: $34.99. MDM cost: $24.40 (Price is subject to change without notice)</fullName>
            </value>
            <value>
                <fullName>Hardware cost: Please use IT Purchase Request. monthly data plan: $39.99. MDM cost: $24.40 (Price is subject to change without notice)</fullName>
            </value>
            <value>
                <fullName>Hardware cost: $0. monthly plan: $39.99. MDM cost: $0 (Price is subject to change without notice)</fullName>
            </value>
            <value>
                <fullName>Hardware cost: $0. monthly plan: $16.99 w/Push-To-Talk, $14.99 voice, MDM cost: $0 (Price is subject to change without notice)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>