force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Hotspot__c.field-meta.xml
<CustomField>
    <fullName>Hotspot__c</fullName>
    <label>Hotspot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>