force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOHMH Location</fullName>
            </value>
            <value>
                <fullName>Non DOHMH Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>