force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Internaltional_Roaming__c.field-meta.xml
<CustomField>
    <fullName>Internaltional_Roaming__c</fullName>
    <label>Internaltional Roaming</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>