force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <label>Migrated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>