force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Mobile_Deivce_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Deivce_Ownership__c</fullName>
    <inlineHelpText>Please select the device ownership</inlineHelpText>
    <label>Mobile Deivce Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bring Your Own Device (BYOD)</fullName>
            </value>
            <value>
                <fullName>DOHMH Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>