force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Mobile_Phone_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Carrier__c</fullName>
    <inlineHelpText>Please select the mobile carrier</inlineHelpText>
    <label>Mobile Phone Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Verizon Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>