force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>