force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <description>This field captures the name of the employee</description>
    <inlineHelpText>Please enter your name</inlineHelpText>
    <label>Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>