force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This will capture the name of the employee.</description>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Mobile Device Requests</relationshipLabel>
    <relationshipName>IT_Mobile_Device_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>