force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Reason_for_a_new_replacement_device__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_a_new_replacement_device__c</fullName>
    <label>Justification for new/replacement device</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>