force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Reason_for_the_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_the_Replacement__c</fullName>
    <label>Reason for the Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>