force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Related_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_ID__c</fullName>
    <label>Related Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>