force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Related_Case_URL__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_URL__c</fullName>
    <label>Related Case URL</label>
    <type>Url</type>
</CustomField>