force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Requester_Work_Unit__c.field-meta.xml
<CustomField>
    <fullName>Requester_Work_Unit__c</fullName>
    <label>Requester Work Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>