force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Select_Your_Divisional_Approver_DC__c.field-meta.xml
<CustomField>
    <fullName>Select_Your_Divisional_Approver_DC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Your Divisional Approver/DC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Mobile_Device_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>