force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Select_Your_Divisional_Approver_DC_Old__c.field-meta.xml
<CustomField>
    <fullName>Select_Your_Divisional_Approver_DC_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Your Divisional Approver/DC Old</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>IT Mobile Device Requests (Select Your Divisional Approver/DC)</relationshipLabel>
    <relationshipName>IT_Mobile_Device_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>