force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/SIM_CCID__c.field-meta.xml
<CustomField>
    <fullName>SIM_CCID__c</fullName>
    <label>SIM/CCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>