force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/Type_Of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Request__c</fullName>
    <label>Type Of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Change in Features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>