force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/What_mobile_device_are_you_requesting__c.field-meta.xml
<CustomField>
    <fullName>What_mobile_device_are_you_requesting__c</fullName>
    <label>What mobile device are you requesting?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPhone (both device &amp; data plan)</fullName>
            </value>
            <value>
                <fullName>iPad (data plan only)</fullName>
            </value>
            <value>
                <fullName>Samsung Tablet (data plan only)</fullName>
            </value>
            <value>
                <fullName>CCEWIN</fullName>
            </value>
            <value>
                <fullName>Verizon Flip Phone (both device &amp; cell plan)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ISP AirCard (Both Device &amp; Data Plan)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>