force-app/main/default/objects/IT_Mobile_Device_Request__c/fields/What_Type_of_Phone__c.field-meta.xml
<CustomField>
    <fullName>What_Type_of_Phone__c</fullName>
    <label>What Type of Phone?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apple Phone</fullName>
            </value>
            <value>
                <fullName>Android Phone</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>