force-app/main/default/objects/IT_Mobile_Device_Request__c/recordTypes/Another_User.recordType-meta.xml
<RecordType>
    <fullName>Another_User</fullName>
    <active>true</active>
    <description>Please select this option when you are completing this request on behalf of other user</description>
    <label>Another User</label>
</RecordType>