force-app/main/default/objects/IT_Mobile_Device_Request__c/recordTypes/IT_Mobile_Device_Request.recordType-meta.xml
<RecordType>
    <fullName>IT_Mobile_Device_Request</fullName>
    <active>true</active>
    <label>IT Mobile Device Request</label>
</RecordType>