force-app/main/default/objects/IT_Mobile_Device_Request__c/recordTypes/Myself.recordType-meta.xml
<RecordType>
    <fullName>Myself</fullName>
    <active>true</active>
    <description>Please select this option when requesting the mobile device for yourself</description>
    <label>Myself</label>
</RecordType>