force-app/main/default/objects/IT_Mobile_Device_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Related_Case_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type_Of_Request__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Requester_Email__c</columns>
    <columns>Select_Your_Divisional_Approver_DC__c</columns>
    <columns>Bureau__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>