force-app/main/default/objects/IT_Mobile_Device_Request__c/listViews/Employee_View.listView-meta.xml
<ListView>
    <fullName>Employee_View</fullName>
    <columns>NAME</columns>
    <columns>Related_Case_ID__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Bureau__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Employee View</label>
</ListView>