force-app/main/default/objects/IT_Mobile_Device_Request__c/listViews/IT_MDR_Approvers_IT_Mobile_Device_Request.listView-meta.xml
<ListView>
    <fullName>IT_MDR_Approvers_IT_Mobile_Device_Request</fullName>
    <filterScope>Everything</filterScope>
    <label>IT MDR Approvers</label>
</ListView>