force-app/main/default/objects/IT_Mobile_Device_Request__c/listViews/IT_MDR_Approvers_IT_Mobile_Device_Request1.listView-meta.xml
<ListView>
    <fullName>IT_MDR_Approvers_IT_Mobile_Device_Request1</fullName>
    <filterScope>Queue</filterScope>
    <label>IT MDR Approvers</label>
    <queue>IT_MDR_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>