force-app/main/default/objects/IT_Mobile_Device_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Related_Case_ID__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>